# yaru-Delekesein.ubuntu

cinnamon-shell/: meson.build
cinnamon-shell/src/: meson.build  post_install.py  rename-cinnamon-assets.sh
cinnamon-shell/upstream/: parse-sass.sh
gtk/src/: meson.build
